--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
   <title>AngularChat App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="esAAZAfVQSFihNR3VNrZNCJOxBqic7JcWwrOlGHbNa4" />
+  <meta name="title" content="Angular One-On-One Chat">
+  <meta name="description" content="Angular One-On-One Chat with the integration of comet chat SDK.">
+  <meta name="keywords" content="Chat Site, Angular Chat, One-On-One Chat">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
